@@ -1,3 +1,13 @@
+2020-03-06  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	mailbox: Guard against out-of-bounds access to a GPtrArray
+
+	* libbalsa/mailbox.c (mailbox_compare_func),
+	(libbalsa_mailbox_msgno_get_status),
+	(libbalsa_mailbox_msgno_get_subject),
+	(libbalsa_mailbox_get_index_entry): use a new macro
+	LBM_GET_INDEX_ENTRY() to safely access priv->mindex.
+
 2020-03-04  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	mailbox: Do not cache message info if the mailbox is not being
